hphp/test/zend/good/Zend/tests/exception_005.php.expectf

Fatal error: Cannot instantiate interface a in %s/exception_005.php on line 5
